Correcion de errores en modificadores de acceso de las clases y metodos de pruebas